--- a/calc.html
+++ b/calc.html
@@ -15,6 +15,13 @@
 <div class="container">
 
 <div class="row">
+	<p>2-2 Simulator </p>
+</div>
+
+<div class="row">
+	<p><b>Disclaimer: Rates are inaccurate right now. I am not part of the development team behind Survival Project.</b> </p>
+</div>
+<div class="row">
 	<p>Select the environment (FM, Prem card)</p>
 </div>
 <div class="row">
