Chinese text change
fixed a typo in one of the chinese display messages

--- a/calc_ch.html
+++ b/calc_ch.html
@@ -195,7 +195,7 @@ switch (true) {
 }
 var percentDisplayMsg = "";
 if (percentResult <= currPercent){
-	percentDisplayMsg = currPercent + " *保持不变，因为生成随机数比当前装备的%小。";
+	percentDisplayMsg = currPercent + " *保持不变，因为生成随机数所得到的%比当前装备的%小。";
 }else if (percentResult == 999){
 	percentDisplayMsg = currPercent + " 保持不变，因为有30%的机率保持%。";
 }else if (percentResult == 9999){
