--- a/calc.html
+++ b/calc.html
@@ -92,7 +92,7 @@ function myFunction() {
 // Get the checkboxes
 	var fm = document.getElementById("fm");
 	var prem = document.getElementById("prem");
-	var prem = document.getElementById("gf");
+	var gf = document.getElementById("gf");
 	  
 	var currPercent = document.getElementById("inputPercent").value;
 	if(currPercent > 35)
