Tweaked the popup message
added a -1 to your %! in the message.

--- a/calc.html
+++ b/calc.html
@@ -133,7 +133,9 @@
 		<img src="https://media1.tenor.com/images/dab0d339e3e87e6dc7c96e68882f1007/tenor.gif" alt="okarin" width="300" height="200">
 	</div>
 	<div class="col-sm-4"> 
-		You got pwned by Q!
+		You got pwned by Q! 
+		<br>
+		-1 to your %!
 	</div>
 	</div>
   </div>
