--- a/22sim.html
+++ b/22sim.html
@@ -102,6 +102,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="22sim_ch.html">华语</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -135,7 +138,7 @@
       <div class="container">
 		<div class="row">
 			  <div class="col-lg-8 mx-auto">
-				<h2>Select the environment (FM, Premium Card)</h2>
+				<h3>Select the environment (FM, Premium Card)</h3>
 			  </div>
 		</div>
 		<div class="row">
@@ -204,7 +207,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>About</h2>
-            <p class="lead">This simulator was developed to aid the understanding of how a 2-2 skill fusion works in SP Generations. The code for the 2-2 calculation was provided on 10th July 2018.</p>
+            <p class="lead">This simulator was developed to aid the understanding of how a 2-2 skill fusion works in SP Generations. The code for the 2-2 calculation was provided on 17th July 2018.</p>
           </div>
         </div>
       </div>
