resized Okarin. Buttons adjusted
Okarin is now bootstrap fluid.
2-2 and reset buttons are now in a single row.

--- a/22sim_ch.html
+++ b/22sim_ch.html
@@ -72,7 +72,7 @@
     <span class="close">&times;</span>
 	<div class="row">
 	<div class="col-sm-4"> 
-		<img src="https://media1.tenor.com/images/dab0d339e3e87e6dc7c96e68882f1007/tenor.gif" alt="okarin" width="300" height="200">
+		<img src="https://media1.tenor.com/images/dab0d339e3e87e6dc7c96e68882f1007/tenor.gif" alt="okarin"  class="img-fluid">
 	</div>
 	<div class="col-sm-4"> 
 		You got pwned by Q! 
@@ -160,9 +160,11 @@
 		<div class="row">
 			<div class="col-lg-2 col-sm-0"></div>
 			<div class="col-lg-2">输入当前装备的%</div>
-			<div class="col-lg-1"> <input id="inputPercent" type="number" value="16" min="9" max="36" ></div>
-			<div class="col-lg-1"><button id="22button" onclick="main()">2-2</button></div>
-			<div class="col-lg-1"><button id="clearBtn" onclick="clearFunction()">Reset</button></div>
+			<div class="col-lg-4">
+				<input id="inputPercent" type="number" value="16" min="9" max="36" >
+				<button id="22button" onclick="main()">2-2</button>
+				<button id="clearBtn" onclick="clearFunction()">Reset</button>
+			</div>
 		</div>
 		
 		<div class="row">
