Chinese version complete
Chinese complete
Slight tweak to both versions (Final Roll number positioning)

--- a/22sim.html
+++ b/22sim.html
@@ -348,8 +348,7 @@ function main(){
 		x = x-3;
 		displayMsg = displayMsg + "<br>-3 From Percent >= 25 "
 	}
-	  displayMsg = displayMsg + "<br>----<br>Final roll = " + x;
-	
+	  displayMsg = displayMsg + "<br>----<br>" + x +" Final roll" ;	
 	var groupResult = getGroupFromRolledNo(x);
 	
 	var percentDisplayMsg = "";//Prepare explanation message
