Reset btn on Checkboxe
Checkboxes are now reset properly.
Added a troll comment in the html code.

--- a/22sim.html
+++ b/22sim.html
@@ -74,7 +74,7 @@
   </head>
 
   <body id="page-top">
-  
+  <!-- Why is spk such a troll? -->
 <!-- The Modal -->
 <div id="myModal" class="modal">
 
@@ -306,6 +306,11 @@ function clearFunction(){
 	document.getElementById("rollMsg").innerHTML = "";
 	//Update the current percent input field
 	document.getElementById("inputPercent").value = 16;
+	//Uncheck checkboxes
+	document.getElementById("fm").checked = false;
+	document.getElementById("prem").checked = false;
+	document.getElementById("gf").checked = false;
+
 }
 function main(){
 // Get the checkboxes
