--- a/22sim.html
+++ b/22sim.html
@@ -243,7 +243,7 @@
 			      <tr id="grp1">
 			        <td>1</td>
 			        <td>3 and below</td>
-			        <td>36</td>
+			        <td>36 (Guaranteed)</td>
 			      </tr>
 			    </tbody>
 			  </table>
